# corelib

./: CMakeLists.txt
sources/: CMakeLists.txt
sources/cmake/: utils.cmake
sources/include/: CMakeLists.txt  Core.h
sources/include/Asserts/: AssertMacros.h  Asserts.h  CMakeLists.txt
sources/include/FormatUtils/: CMakeLists.txt  GenericFormat.h  StandardFormat.h
sources/include/Internal/: CMakeLists.txt  stdpch.h
sources/include/Log/: CMakeLists.txt  DebuggerDisplaySink.h  FileLogSink.h  Log.h  LogMacros.h  LogMessageData.h  LogMessageSeverity.h  LogSink.h  LogStream.h  LogUtils.h
sources/src/: CMakeLists.txt
sources/src/Asserts/: Asserts.cpp  CMakeLists.txt
sources/src/Log/: CMakeLists.txt  DebuggerDisplaySink.cpp  FileLogSink.cpp  Log.cpp  LogUtils.cpp
sources/tests/: CMakeLists.txt
sources/tests/gtest/: CMakeLists.txt
sources/tests/include/: CMakeLists.txt
sources/tests/include/Asserts/: CMakeLists.txt
sources/tests/src/: CMakeLists.txt
sources/tests/src/Asserts/: AssertsTest.cpp  CMakelists.txt
sources/tests/src/Log/: CMakeLists.txt  LogTest.cpp
